--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -323,3 +323,20 @@ body {
   margin-top: 1rem;
 }
 
+.whatsapp-icon {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+.whatsapp-icon img {
+  width: 40px;
+  height: 40px;
+}
