--- a/src/App.css
+++ b/src/App.css
@@ -1,89 +1,38 @@
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
-
 .App {
   text-align: center;
 }
 
-.Navbar {
-  background-color: #000000;
-  color: white;
-  padding: 1rem;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  justify-content: space-around;
-}
-
-.Navbar a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.2rem;
-}
-
-.Navbar a:hover {
-  color: #ff6347;
-}
-.hero {
-  .hero {
-    background: none;
-}
-
-  color: rgb(255, 255, 255);
-  text-align: center;
-  padding: 1rem 1rem;
-}
-.content {
-  padding: 1rem;
-}
-
-h1 {
-  color: #ffffff;
-}
-
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  gap: 0.1rem;
-  margin-top: 0.1rem;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.gallery img {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
-  transition: transform 0.3s ease;
+.App-link {
+  color: #61dafb;
 }
 
-.gallery img:hover {
-  transform: scale(1.05);
-}
-
-.about {
-  margin-top: 3rem;
-  padding: 2rem;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.about h2 {
-  color: #333;
-}
-
-.about p {
-  color: #666;
-  line-height: 1.6;
-}
-
-.gallery-item img {
-  width: 95%;
-  height: 80%;
-  object-fit: cover;
-  border-radius: 15px;
-  transition: transform 0.3s ease;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
