--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -502,7 +502,7 @@ header .social-media a:hover {
 .social-icons {
   color: #ffffff;
   margin-top: 15px;
-  margin-right: 35px;
+  margin-right: 55px;
 }
 
 .social-icons a {
@@ -864,19 +864,19 @@ header nav ul li a:hover {
 .gallery-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
-  gap: 15px;
+  gap: 90px;
   padding: 20px;
   justify-content: center;
   align-items: center;
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
 }
 
 /* Gallery Images */
 .gallery-container img {
-  width: 100%;
-  height: 200px; /* Fixed height to ensure uniform size */
-  object-fit: cover; /* Ensures images fill the box without distortion */
+  width: 120%;
+  height: 450px; 
+  object-fit: cover; 
   border-radius: 10px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -884,16 +884,16 @@ header nav ul li a:hover {
 /* Hover Effect */
 .gallery-container img:hover {
   transform: scale(1.05);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  
 }
 
 /* Responsive Design */
 @media (max-width: 768px) {
   .gallery-container {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust grid for smaller screens */
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
 
   .gallery-container img {
-    height: 150px; /* Smaller height for better mobile view */
+    height: 150px; 
   }
 }
