--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -131,40 +131,52 @@ color: #ff802c;
 
 /* Home Page Background */
 .homepage {
-background-size: cover;
-background-position: center;
-background-repeat: no-repeat;
-height: 100vh;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-color: white;
-text-align: center;
-padding: 20px;
-animation: changeBackground 20s infinite; /*  20 seconds */
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  overflow: hidden; /* Prevents overflow issues */
 }
 
-/* Animation for background change */
+/* Background Image Container */
+.homepage::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  animation: changeBackground 20s infinite;
+  transition: opacity 2s ease-in-out; /* Smooth transition */
+  z-index: -1; /* Keeps background behind content */
+}
+
+/* Animation for Smooth Background Change */
 @keyframes changeBackground {
-0% {
-  background-image: url('../assets/images/background1.jpg');
-}
-25% {
-  background-image: url('../assets/images/background2.jpg');
-}
-50% {
-  background-image: url('../assets/images/background3.jpg');
-}
-75% {
-  background-image: url('../assets/images/background4.jpg');
-}
-99% {
-  background-image: url('../assets/images/background5.jpg');
-}
-100% {
-  background-image: url('../assets/images/background1.jpg');
-}
+  0%, 100% {
+    background-image: url('../assets/images/background1.jpg');
+    opacity: 1;
+  }
+  25% {
+    background-image: url('../assets/images/background2.jpg');
+  }
+  50% {
+    background-image: url('../assets/images/background3.jpg');
+  }
+  75% {
+    background-image: url('../assets/images/background4.jpg');
+  }
+  90% {
+    background-image: url('../assets/images/background5.jpg');
+  }
 }
 
 /* Service Page Background */
